<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_splash_mt"
    android:orientation="vertical"
    android:padding="17dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_mask_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                style="@style/text"
                android:text="@string/msg_main_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="35"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMaskNewTipoF"
                android:layout_width="291dp"
                android:layout_height="161dp"
                app:srcCompat="@drawable/mask2" />

            <Button
                android:id="@+id/btnMaskNewTipoF"
                style="@style/btn"
                android:layout_marginTop="-20dp"
                android:text="@string/msg_main_ffp2" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="35"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMaskNewTipoQ"
                android:layout_width="291dp"
                android:layout_height="161dp"
                app:srcCompat="@drawable/mask1" />

            <Button
                android:id="@+id/btnMaskNewTipoQ"
                style="@style/btn"
                android:layout_marginTop="-20dp"
                android:text="@string/msg_main_surgical" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mask_edit"
        android:layout_width="399dp"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_currentmask" />

            <ImageView
                android:id="@+id/ivMaskEditTipoF"
                android:layout_width="291dp"
                android:layout_height="161dp"
                app:srcCompat="@drawable/mask2" />

            <ImageView
                android:id="@+id/ivMaskEditTipoQ"
                android:layout_width="match_parent"
                android:layout_height="161dp"
                android:visibility="gone"
                app:srcCompat="@drawable/mask1" />

            <LinearLayout
                style="@style/Theme.Mask_Timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="45dp"
                android:background="@drawable/redondeado"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tvMaskActTipo"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/txt_mask_edit_tipo"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvMaskActInicio"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/txt_mask_edit_inicio"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvMaskActConsumido"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/txt_mask_edit_consumido"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvMaskActRestante"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/txt_mask_edit_restante"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btnMaskEdit"
                    style="@style/btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/txt_mask_edit_resume"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/btnMaskFinish"
                    style="@style/btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/txt_btn_MaskFinish"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>